terraform/modules/network/main.tf
resource "aws_vpc" "main_vpc" {
  cidr_block           = var.vpc_cidr_block
  enable_dns_support   = var.enable_dns_support
  enable_dns_hostnames = var.enable_dns_hostnames
  tags = {
    Name = "${var.name}-vpc"
  }
}

resource "aws_subnet" "public_subnet" {
  vpc_id                  = aws_vpc.main_vpc.id
  cidr_block              = var.public_subnet_cidr_block
  map_public_ip_on_launch = var.map_public_ip_on_launch
  availability_zone       = var.availability_zone

  tags = {
    Name = "${var.name}-public-subnet"
  }
}

resource "aws_subnet" "private_subnet" {
  vpc_id                  = aws_vpc.main_vpc.id
  cidr_block              = var.private_subnet_cidr_block
  availability_zone       = var.availability_zone
  map_public_ip_on_launch = false

  tags = {
    Name = "${var.name}-private-subnet"
  }
}

resource "aws_subnet" "private_subnet_bkp" {
  vpc_id                  = aws_vpc.main_vpc.id
  cidr_block              = var.private_subnet_bkp_cidr_block
  availability_zone       = var.availability_zone_bkp
  map_public_ip_on_launch = false

  tags = {
    Name = "${var.name}-private-subnet-bkp"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main_vpc.id
  tags = {
    Name = "${var.name}-internet-gateway"
  }
}

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.main_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "${var.name}-public-route-table"
  }
}

resource "aws_route_table_association" "public_rt_assoc" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_security_group" "instance_sg" {
  name   = "${var.name}-security-group"
  vpc_id = aws_vpc.main_vpc.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  dynamic "ingress" {
    for_each = var.ingress_rules
    content {
      from_port   = ingress.value["from_port"]
      to_port     = ingress.value["to_port"]
      protocol    = ingress.value["protocol"]
      cidr_blocks = ingress.value["cidr_blocks"]
    }
  }
}

resource "aws_security_group" "database_sg" {
  vpc_id = aws_vpc.main_vpc.id

  ingress {
    description      = "Allow access from Bastion and Lambda"
    from_port        = 5432
    to_port          = 5432
    protocol         = "tcp"
    cidr_blocks      = [var.public_subnet_cidr_block]
    # security_groups  = [var.bastion_sg_id]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.name}-database-sg"
  }
}

resource "aws_security_group" "bastion_sg" {
  vpc_id = aws_vpc.main_vpc.id

  tags = {
    Name = "${var.name}-bastion-sg"
  }
}

# Here we define the ingress and egress rules apart
resource "aws_vpc_security_group_ingress_rule" "bastion_sg_ingress" {
  security_group_id = aws_security_group.bastion_sg.id

  description = "Allow SSH access from your IP"
  from_port   = 22
  to_port     = 22
  ip_protocol = "tcp"
  cidr_ipv4   = var.bastion_cidr_ipv4
}

resource "aws_vpc_security_group_egress_rule" "bastion_sg_egress" {
  security_group_id = aws_security_group.bastion_sg.id

  description = "Allow all outbound traffic"
  ip_protocol = "-1"
  cidr_ipv4   = "0.0.0.0/0"
}

# Create a network interface to detach security group
# configuration changes from the bastion VM itself
resource "aws_network_interface" "bastion_eni" {
  subnet_id       = aws_subnet.public_subnet.id
  security_groups = [aws_security_group.bastion_sg.id]
}

# Create an elastic IP to associate to the bastion
resource "aws_eip" "bastion_eip" {
  network_interface = aws_network_interface.bastion_eni.id
  depends_on        = [aws_network_interface.bastion_eni]
}

# Endpoint VPC pour accès à Secrets Manager
resource "aws_vpc_endpoint" "secretsmanager_endpoint" {
  vpc_id              = aws_vpc.main_vpc.id
  service_name        = "com.amazonaws.${var.region}.secretsmanager"
  vpc_endpoint_type   = "Interface"
  private_dns_enabled = true
  subnet_ids          = [aws_subnet.public_subnet.id]
  security_group_ids  = [aws_security_group.instance_sg.id]
}

# VPC endpoints required by ECS cluster to access ECR
resource "aws_vpc_endpoint" "service_endpoints" {
  for_each = var.integration_target == "ecs" ? {
    "ecr_api" = {
      service_name = "com.amazonaws.${var.region}.ecr.api"
      endpoint_type = "Interface"
      security_group_ids = [aws_security_group.instance_sg.id]
      subnet_ids = [aws_subnet.public_subnet.id]
      route_table_ids = []
      private_dns_enabled = true
    }
    "ecr_dkr" = {
      service_name = "com.amazonaws.${var.region}.ecr.dkr"
      endpoint_type = "Interface"
      security_group_ids = [aws_security_group.instance_sg.id]
      subnet_ids = [aws_subnet.public_subnet.id]
      route_table_ids = []
      private_dns_enabled = true
    }
    "s3" = {
      service_name = "com.amazonaws.${var.region}.s3"
      endpoint_type = "Gateway"
      security_group_ids = []
      subnet_ids = []
      route_table_ids = [aws_route_table.public_rt.id]
      private_dns_enabled = false
    }
    "cloudwatch_logs" = {
      service_name = "com.amazonaws.${var.region}.logs"
      endpoint_type = "Interface"
      security_group_ids = [aws_security_group.instance_sg.id]
      subnet_ids = [aws_subnet.public_subnet.id]
      route_table_ids = []
      private_dns_enabled = true
    }
    "cloudwatch_metrics" = {
      service_name = "com.amazonaws.${var.region}.monitoring"
      endpoint_type = "Interface"
      security_group_ids = [aws_security_group.instance_sg.id]
      subnet_ids = [aws_subnet.public_subnet.id]
      route_table_ids = []
      private_dns_enabled = true
    }
  } : {}

  vpc_id            = aws_vpc.main_vpc.id
  service_name      = each.value.service_name
  vpc_endpoint_type = each.value.endpoint_type

  security_group_ids = each.value.security_group_ids
  subnet_ids         = each.value.subnet_ids
  route_table_ids    = each.value.route_table_ids

  private_dns_enabled = each.value.private_dns_enabled

  tags = {
    Name = "${var.name}-${each.key}-endpoint"
  }
}
